--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <footer>
             <div class="container">
                 <p>&copy; 2025 Vanguard. All rights reserved.</p>
-                <p>Email: info@vanguard.com </p>
+                <p>Email:<a href="">info@vanguard.com</a> </p>
                 <p>Phone: 480.123.4567</p>
             </div>
         </footer>
